<?xml version="1.0"?>
<package format="2">
  <name>fanuc_lrmate200id_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc LR Mate 200iD (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc LR Mate 200iD manipulators. This currently includes the
      base model only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>LR Mate 200iD - "J1 - Normal Range"</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot LR Mate 200iD Mechanical Unit Operator's Manual</em>
      version <em>B-83494EN/03</em>. All urdfs are based on the default motion
      and joint velocity limits, unless noted otherwise (ie: no support for
      high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_lrmate200id_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>lrmate200id</tag>
        <tag>experimental</tag>
      </tags>
    </rosindex>
  </export>
</package>
