<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_m10id_support</name>
  <version>0.5.1</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc M-10iD (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc M-10iD manipulators. This includes the base model and the
      /7L variant.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>M-10iD - "Conventional dress-out"</li>
      <li>M-10iD/12 - "Conventional dress-out"</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot M-10iD Mechanical Unit Operator's Manual</em>
      version <em>B-82754EN/09</em>. All urdfs are based on the default motion
      and joint velocity limits, unless noted otherwise (ie: no support for
      high speed joints, extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Stephen Earl (Bastian Solutions)</author>
  <maintainer email="searl@bastiansolutions.com">Stephen Earl (Bastian Solutions)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_m10id_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>m10id</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
