<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_m16ib_moveit_plugins</name>
  <version>0.4.2</version>
  <description>
    <p>
      MoveIt plugins for the Fanuc M-16iB (and variants).
    </p>
    <p>
      This package contains plugins for use with MoveIt and Fanuc M-16iB
      manipulators. Plugins included support the base model. See the Fanuc
      M-16iB support package for information on used joint angle and velocity
      limits.
    </p>
    <p>
      Before using any of the plugins included in this package, be sure to
      check they are correct for the particular robot model and configuration
      you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_m16ib_moveit_plugins</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>liblapack-dev</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf_conversions</depend>

  <export>
    <moveit_core plugin="${prefix}/m16ib20_kinematics/fanuc_m16ib20_manipulator_moveit_ikfast_plugin_description.xml"/>
    <rosindex>
      <tags>
        <tag>moveit</tag>
        <tag>ikfast</tag>
        <tag>kinematics</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>m16ib</tag>
      </tags>
    </rosindex>
  </export>
</package>
