<package>
  <name>fanuc_m16ib_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS Industrial support for the Fanuc M-16iB / ARC Mate 120iB (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc M-16iB / ARC Mate 120iB manipulators. This currently includes
      the /20 only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>M-16iB/20 - "Default J1 range"</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot ARC Mate 120iB, Fanuc Robot M-16iB/20 Mechanical
      Unit Maintenance Manual</em> version <em>B-81765EN/02</em>. All urdfs are
      based on the default motion and joint velocity limits, unless noted
      otherwise (ie: no support for high speed joints, extended / limited
      motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fanuc_m16ib_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>fanuc_resources</run_depend>
  <run_depend>fanuc_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>
