<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_m20ia_support</name>
  <version>0.4.2</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc M-20iA / ARC Mate 120iC (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc M-20iA / ARC Mate 120iC manipulators. This currently includes
      the base model and /10L.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>M-20iA - "Cable integrated J3 Arm"</li>
      <li>M-20iA/10L - "Cable integrated J3 Arm"</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>FANUC Robot ARC Mate 120iC, FANUC Robot M-20iA Mechanical Unit
      Operator's Manual</em> version <em>B-82874EN/06</em>. All urdfs are based
      on the default motion and joint velocity limits, unless noted otherwise
      (ie: no support for high speed joints, extended / limited motion ranges
      or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
    <p><b>Contributors</b>:</p>
    <p>
      This support package has received contributions from: Joe Spanier (M-20iA/10L).
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_m20ia_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>m20ia</tag>
      </tags>
    </rosindex>
  </export>
</package>
