<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>fanuc_m430ia_moveit_plugins</name>
  <version>0.3.1</version>
  <description>
    <p>
      MoveIt plugins for the Fanuc M-430iA (and variants).
    </p>
    <p>
      This package contains plugins for use with MoveIt and Fanuc M-430iA
      manipulators. Plugins included support the 2F and 2P model. See the Fanuc
      M-430iA support package for information on used joint angle and velocity
      limits.
    </p>
    <p>
      Before using any of the plugins included in this package, be sure to
      check they are correct for the particular robot model and configuration
      you intend to use them with.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/fanuc_m430ia_moveit_plugins</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>liblapack-dev</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <moveit_core plugin="${prefix}/m430ia2f_kinematics/fanuc_m430ia2f_manipulator_moveit_ikfast_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/m430ia2p_kinematics/fanuc_m430ia2p_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
