<package>
  <name>fanuc_m430ia_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS Industrial support for the Fanuc M-430iA (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files 
      for Fanuc M-430iA manipulators. This currently includes the 2F variant 
      only.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in 
      the <em>FANUC Robot M-430iA Mechanical Unit Operator's Manual</em> 
      version <em>B-82554EN/05</em>. All URDFs / XACROs are based on the 
      default motion and joint velocity limits, unless noted otherwise (ie: 
      no support for high speed joints, extended / limited motion ranges or 
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included 
      in this package, be sure to check they are correct for the particular 
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fanuc_m430ia_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>fanuc_assets</run_depend>
  <run_depend>fanuc_driver</run_depend>
</package>

